fixed text wrap on some components

--- a/src/ScssPartials/UserPanel.scss
+++ b/src/ScssPartials/UserPanel.scss
@@ -52,7 +52,14 @@
   height: 100%;
   width: 100%;
 }
-
+.ant-card .ant-card-meta-title {
+  color: rgba(0, 0, 0, 0.88);
+  font-weight: 600;
+  font-size: 16px;
+  overflow: hidden;
+  white-space: wrap;
+  text-overflow: ellipsis;
+}
 .user-info-container {
   background-color: $light-color;
   display: flex;
